amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-definition
  Message: Type definitions must have at least one field
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-object.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(9,11)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error in the following text: '}'
  Severity: Violation
  Target: 
  Property: 
  Range: [(10,0)-(10,1)]
  Location: 
